--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "resources:android": "cordova-res android --skip-config --copy",
+    "resources:android": "npx capacitor-assets generate --android",
     "resources:electron": "xcopy /s /d /y resources\\electron\\ electron\\assets\\",
     "add:electron": "npx cap add @capacitor-community/electron && cd electron && npm install --save sqlite3 && npm install --save jszip  && npm install --save node-fetch  && npm install --save-dev @types/sqlite3 && npm run copy-db:electron && npm run resources:electron",
     "copy-db:electron": "xcopy /s /d src\\assets\\databases electron\\assets\\databases\\",
@@ -41,6 +41,7 @@
     "@capacitor-community/sqlite": "^4.2.0",
     "@capacitor/android": "^4.4.0",
     "@capacitor/app": "^4.0.0",
+    "@capacitor/assets": "^2.0.4",
     "@capacitor/core": "^4.4.0",
     "@capacitor/electron": "^2.5.0",
     "@capacitor/filesystem": "^4.0.0",
